fixing tob-bar alignment issue

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,7 +8,6 @@
     position: sticky;
     top: 0;
     z-index: 1000;
-    margin-left: 50;
 }
 
 .action-section {
